# rust-musl-docker-buld-multi-arch

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-images.yml
src/: main.rs
